# gtt-api

./: .dockerignore  .env.sample  .env.test.sample  .gitignore  Dockerfile  README.md  alembic.ini  alembic.ini.sample  docker-compose.yml  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-images.yml
config/: settings.default.ini
migrations/: env.py
migrations/data/: .gitignore  default_actions.sample.csv  default_projects.sample.csv  default_users.sample.csv
migrations/versions/: 0d48814d71a9_add_night_municipality_to_travel.py  0f841725c541_delete_cascade.py  107fb417a5db_init_db.py  17b9e53d372c_add_numero_action.py  1cbc07e73ac4_add_cascade_delete_to_action.py  2076792f348d_fix_travel_model.py  3e092233071d_add_default_projects.py  43c8214be822_add_delete_cascade_to_travel.py  71d5d63bdcab_delete_cascade.py  93af8d60f524_change_the_type_of_some_fields.py  98959d1da446_add_default_actions.py  c94eb6d555f5_add_default_users.py  e1e4cccc9eb3_add_delete_cascade_to_travel.py  ec06874d5c81_change_numero_action_type.py
src/: config.py  database.py  extensions.py  main.py  models.py
src/api/: __init__.py  exception.py  models.py
src/api/action/: __init__.py  routes.py  schema.py  services.py
src/api/auth/: routes.py  schema.py  services.py  utils.py
src/api/expense/: __init__.py  routes.py  schema.py  services.py
src/api/project/: routes.py  schema.py  services.py
src/api/travel/: __init__.py  routes.py  schema.py  services.py
src/api/user/: routes.py  schema.py  services.py
src/api/user-action/: __init__.py
src/api/user-action-time.py/: __init__.py
src/api/userAction/: routes.py  services.py
src/api/userActionTime/: routes.py  schema.py  services.py
src/gtt/: config.py  main.py  models.py
src/gtt/api/action/: routes.py  services.py
src/gtt/api/auth/: routes.py  services.py  utils.py
src/gtt/api/expense/: routes.py  services.py
src/gtt/api/project/: routes.py  schema.py  services.py
src/gtt/api/travel/: routes.py  schema.py  services.py
src/gtt/api/user/: routes.py  services.py
src/gtt/api/userAction/: routes.py  services.py
src/gtt/api/userActionTime/: routes.py  schema.py  services.py
tests/: conftest.py  test.py  test_project.py  test_user_routes.py
