[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtt-api"
dynamic = ["version"]
description = "API backend for GTT application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LICENSE" }
authors = [{ name = "CBN Alpin" }]
keywords = ["gtt", "api", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "alembic~=1.17",
    "Flask~=3.1",
    "Flask-Cors~=6.0",
    "Flask-JWT-Extended~=4.7",
    "Flask-SQLAlchemy~=3.1",
    "SQLAlchemy~=2.0",
    "Flask-Migrate~=4.1",
    "psycopg2-binary~=2.9",
    "python-dotenv~=1.2",
    "requests~=2.32",
    "marshmallow~=3.26",
    "google-auth~=2.45",
]

[project.optional-dependencies]
dev = ["click~=8.3", "pytest~=9.0", "pytest-dotenv~=0.5", "ruff~=0.14"]

[project.urls]
Repository = "https://github.com/cbn-alpin/gtt-api"
Issues = "https://github.com/cbn-alpin/gtt-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Écrit la version dans un fichier VERSION à la racine.
# Ce fichier sera lu par setuptools lors du build dans un environnement sans Git (comme Docker).
write_to = "VERSION.txt"
fallback_version = "0.0.0" # Optionnel : une version par défaut si le fichier manque aussi

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
env_files = [
    ".env.test"
]
# Regex to ignore warnings about the unknown configuration test file, because .env.test is optional
# Format: action:message:category:module:lineno
# Note: Avoid the ":" caracter in the message part with use of "." to match any character
filterwarnings = ["ignore:Unknown config option. env_files:pytest.PytestConfigWarning"]

[tool.alembic]
sqlalchemy.url = "postgresql://user:password@localhost/dbname"
script_location = "%(here)s/migrations"
prepend_sys_path = "."

[tool.ruff]
# Maximum allowed line length
line-length = 100
# Target Python version
target-version = "py310"

[tool.ruff.lint]
# E et W : pycodestyle (PEP8)
# F : Pyflakes
# I : iSort
# B: flake8-bugbear (bugs potentiels)
# C90: flake8-mccabe (complexité)
# PL: Pylint (large sélection de vérifications)
# PT: flake8-pytest-style (bonnes pratiques pytest)
# SIM: flake8-simplify (suggestions de simplification)
# T20: flake8-print (interdit les `print`)
# RUF: Règles spécifiques à Ruff (rapides et utiles)
select = ["E", "W", "F", "I", "B", "C90", "PL", "PT", "SIM", "T20", "RUF"]
ignore = [
    "D100", # missing-module-docstring
    "D101", # missing-class-docstring
    "D102", # missing-function-or-method-docstring"
    "D107", # missing-docstring-in-init
]

[tool.ruff.format]
# Format code like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
